# gridcast

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  dvc.yaml  metrics.json  metrics_catboost.json  metrics_lightgbm.json  metrics_random_forest.json  params.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: data_ingestion.config
dbt/gridcast/: .user.yml  dbt_project.yml  profiles.yml
dbt/gridcast/models/marts/: _marts.yml  fct_demand_features.sql
dbt/gridcast/models/staging/: _sources.yml  _staging.yml  stg_eia__region_data.sql
dbt/gridcast/seeds/: _seeds.yml  us_federal_holidays.csv
docker/: api.Dockerfile  dashboard.Dockerfile
notebooks/: 01_ingest.ipynb  02_clean.ipynb  03_features.ipynb  04_train_catboost.ipynb  04_train_lightgbm.ipynb  04_train_random_forest.ipynb  04_train_xgboost.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
requirements/: base.txt  dev.txt  ml.txt  monitoring.txt  notebook.txt  serve.txt
snowflake/: ddl.sql
src/api/: main.py  refresh_feature_cache.py
src/dashboard/: app.py
src/ingestion/: data_ingestion.py  ingest_eia.py  run.py
src/ml/: clean.py  dataset.py  model.py
src/warehouse/: snowflake_client.py
terraform/: ecr.tf  iam_oidc.tf  outputs.tf  providers.tf  variables.tf
tests/: test_data_ingestion.py  test_ingest_eia.py
